[metadata]
name = platform-e2e
description = Neu.ro platform end-to-end tests
url = https://github.com/neuro-inc/platform-e2e
long_description = file: README.md, LICENSE
license = Apache 2
classifiers =
    License :: OSI Approved :: Apache 2
    Programming Language :: Python :: 3

[options]
zip_safe = False
python_requires = >=3.7
include_package_data = True
packages = find:
platforms = any
install_requires =
    aiohttp==3.8.1
    neuro-cli==22.1.3
    pytest==7.1.0
    pytest-dependency==0.5.1
    pytest-timeout==2.1.0
    pytest-aiohttp==1.0.4

[options.entry_points]
pytest11 =
    e2e = platform_e2e

[options.extras_require]
dev =
    mypy==0.941
    pre-commit==2.17.0


[flake8]
max-line-length = 88
exclude =
    .git
    venv
    __pycache__
    .tox

[isort]
line_length=88
include_trailing_comma=True
multi_line_output=3
force_grid_wrap=0
combine_as_imports=True
lines_after_imports=2
known_first_party=neuro_sdk

[mypy]
check_untyped_defs = True
disallow_any_generics = True
disallow_untyped_defs = True
follow_imports = silent
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
incremental = False

[tool:pytest]
asyncio_mode = auto
markers =
    network_isolation: mark a test as network isolation test.
    blob_storage: mark a test as blob storage test.

[mypy-pytest]
ignore_missing_imports = true


[mypy-setuptools]
ignore_missing_imports = true


[mypy-aiodocker.*]
ignore_missing_imports = true


[mypy-async_exit_stack]
ignore_missing_imports = true

[mypy-aiohttp_security]
ignore_missing_imports = true


[mypy-trafaret]
ignore_missing_imports = true

[mypy-aioredis]
ignore_missing_imports = true

[mypy-jose]
ignore_missing_imports = true

[mypy-humanize]
ignore_missing_imports = true

[mypy-psutil]
ignore_missing_imports = true
