[metadata]
name = platform-e2e
description = Neu.ro platform end-to-end tests
url = https://github.com/neuro-inc/platform-e2e
long_description = file: README.md, LICENSE
license = Apache 2
classifiers =
    License :: OSI Approved :: Apache 2
    Programming Language :: Python :: 3

[options]
zip_safe = False
python_requires = >=3.13
include_package_data = True
packages = find:
platforms = any
install_requires =
    aiobotocore==3.0.0
    apolo-cli==25.12.0
    apolo-sdk==25.12.0
    neuro-auth-client==25.8.2
    neuro-admin-client==25.12.0
    yarl==1.22.0
    jose==1.0.0
    pytest==9.0.2
    pytest-dependency==0.6.0
    pytest-timeout==2.4.0
    pytest-aiohttp==1.1.0
    pytest-asyncio==1.3.0

[options.entry_points]
pytest11 =
    e2e = platform_e2e

[options.extras_require]
dev =
    mypy==1.19.0
    pre-commit==4.5.0

[flake8]
max-line-length = 88
exclude =
    .git
    venv
    __pycache__
    .tox

[isort]
profile = black
combine_as_imports = True

[mypy]
check_untyped_defs = True
disallow_any_generics = True
disallow_untyped_defs = True
follow_imports = silent
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
incremental = False

[tool:pytest]
asyncio_mode = auto
asyncio_default_fixture_loop_scope = session
asyncio_default_test_loop_scope = session
markers =
    network_isolation: mark a test as network isolation test.
    blob_storage: mark a test as blob storage test.

[mypy-pytest]
ignore_missing_imports = true


[mypy-aiodocker.*]
ignore_missing_imports = true


[mypy-async_exit_stack]
ignore_missing_imports = true

[mypy-aiohttp_security]
ignore_missing_imports = true


[mypy-trafaret]
ignore_missing_imports = true

[mypy-aioredis]
ignore_missing_imports = true

[mypy-jose]
ignore_missing_imports = true

[mypy-humanize]
ignore_missing_imports = true

[mypy-psutil]
ignore_missing_imports = true
